--- a/estilos.css
+++ b/estilos.css
@@ -148,15 +148,16 @@ p {
 
 .TituloPagRegistro {
     margin-top: 15%;
-    margin-left: 20%;
-    margin-right: 15%;
+    margin-left: 15%;
+    margin-right: 10%;
     font-size: 90px;
     text-align: left;
     color: #c1d1f6;
 }
 
 .textopagregistro {
-    margin-left: 20%;
+    margin-top: -5%;
+    margin-left: 15%;
     margin-right: 45%;
     font-size: 25px;
     text-align: left;
@@ -180,7 +181,6 @@ p {
 .registrate {
     margin-top: 30%;
     margin-left: 15%;
-    font-family: 'Franklin Gothic Medium';
 }
 
 .textoinicia {
@@ -193,21 +193,39 @@ p {
     margin-left: 15%;
     width: 70%;
     height: 55px;
+    padding: 10px;
     box-sizing: border-box;
     margin-bottom: 20px;
 }
 
 .botonregistro {
-    text-align: center;
     text-decoration: none;
     color: white;
-    padding: 12px 28.6%;
+    padding: 12px;
+    width: 70%;
     margin-left: 15%;
     height: 55px;
     background-color: #004cff;
+    cursor: pointer;
+    border: none;
 }
 
 .cuadrotic{
     margin-left: 15%;
 }
 /*  FIN MITAD DERECHA   */
+
+/*  FIN PAGINA REGISTRARSE  */  
+/*--------------------------------------------------------------------------------*/
+/*  PAGINA INICIAR SESIÓN  */
+
+.login {
+    margin-top: 15%;
+    margin-right: 15%;
+    margin-left: 15%;
+}
+
+.tituloinicia{
+    margin-left: 15%;
+    margin-bottom: 3%;
+}
