--- a/estilos.css
+++ b/estilos.css
@@ -103,7 +103,7 @@ p {
 
 .header-register a {
     float: left;
-    color: black;
+    color: #8ad199;
     text-align: center;
     padding: 12px;
     text-decoration: none;
@@ -122,7 +122,7 @@ p {
 }
 
 .header-right a:hover {
-    background-color: darkgrey;
+    background-color: rgba(41, 119, 46, 0.858);
 }
 
 /*  FIN CABECERA*/
@@ -134,7 +134,10 @@ p {
     top: 0;
     left: 0;
     right: 35%;
-    background-color: #990F4B;
+    background-image: url('Fondo1.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     height: 100%;
 }
 
@@ -166,29 +169,30 @@ p {
     top: 0;
     right: 0;
     left: 65%;
-    background-color: white;
+    background-color: rgba(0, 76, 27, 255);
     height: 100%;
 }
 
 .registrate {
     margin-top: 30%;
     margin-left: 15%;
+    color: #f499b8;
 }
 
 .mitad-derecha>h5 {
     font-size: 20px;
     margin-top: -3%;
     margin-left: 15%;
-    text-decoration:none;
+    text-decoration: none;
 }
 
-.texto-inicia{
-    color: #004cff;
-    text-decoration:none;
+.texto-inicia {
+    color: #8ad199;
+    text-decoration: none;
 }
 
-.texto-inicia:hover{
-    color: #3874ff;
+.texto-inicia:hover {
+    color: #4d965d;
 }
 
 .cuadrostexto input {
@@ -203,23 +207,60 @@ p {
 .botonregistro {
     text-decoration: none;
     font-size: 18px;
-    color: white;
+    color: rgba(0, 76, 27, 255);
     padding: 12px;
     width: 70%;
     margin-left: 15%;
+    margin-top: 3%;
     height: 55px;
-    background-color: #004cff;
+    background-color: #8ad199;
     cursor: pointer;
     border: none;
 }
 
-.cuadrotic{
-    margin-left: 15%;
-    margin-bottom: 20px;
+/*Checkbox personalizado*/
+.custom-checkbox input[type="checkbox"] {
+    display: none;
+    /* Oculta el input original */
 }
+
+/* Estilo de la casilla de verificación personalizada */
+.custom-checkbox input[type="checkbox"]+label::before {
+    content: "";
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin-left: 15%;
+    margin-right: 10px;
+    vertical-align: middle;
+    border: 2px solid #f499b8;
+    /* Color azul original */
+    border-radius: 4px;
+    text-align:center;
+    transition: background-color 0.3s ease;
+}
+
+/* Estilo cuando la casilla de verificación está marcada */
+.custom-checkbox input[type="checkbox"]:checked+label::before {
+    background-color: #8ad199;
+    /* Color azul original */
+    content: "\2714";
+    color: rgba(0, 76, 27, 255);
+}
+
+/* Estilo de la etiqueta asociada a la casilla de verificación */
+.custom-checkbox label {
+    cursor: pointer;
+    vertical-align: middle;
+}
+
+.recuerdame{
+    color:#8ad199;
+}
+
 /*  FIN MITAD DERECHA   */
 
-/*  FIN PAGINA REGISTRARSE  */  
+/*  FIN PAGINA REGISTRARSE  */
 /*--------------------------------------------------------------------------------*/
 /*  PAGINA INICIAR SESIÓN  */
 
@@ -229,7 +270,7 @@ p {
     margin-left: 15%;
 }
 
-.tituloinicia{
+.tituloinicia {
     margin-left: 15%;
     margin-bottom: 3%;
 }
@@ -238,85 +279,102 @@ p {
     font-size: 20px;
     margin-top: -2%;
     margin-left: 15%;
-    text-decoration:none;
+    text-decoration: none;
 }
 
-.texto-registra{
+.texto-registra {
     color: #004cff;
-    text-decoration:none;
+    text-decoration: none;
 }
 
-.texto-registra:hover{
+.texto-registra:hover {
     color: #3874ff;
 }
-/*  FIN PAGINA INICIAR SESION  */  
+
+/*  FIN PAGINA INICIAR SESION  */
 /*--------------------------------------------------------------------------------*/
 /*  PAGINA INDEX  */
 
 /* The side navigation menu */
 
 .container {
-  margin-top:2px;
-  margin-left:-53%;
-  display: inline-block;
-  cursor: pointer;
-  z-index: 5;
+    margin-top: 2px;
+    margin-left: -53%;
+    display: inline-block;
+    cursor: pointer;
+    z-index: 5;
 }
-  
-.bar1, .bar2, .bar3 {
-  width: 35px;
-  height: 5px;
-  background-color: white;
-  margin: 6px 0;
-  transition: 0.4s;
+
+.bar1,
+.bar2,
+.bar3 {
+    width: 35px;
+    height: 5px;
+    background-color: white;
+    margin: 6px 0;
+    transition: 0.4s;
 }
-  
+
 .change .bar1 {
-  transform: translate(0, 11px) rotate(-45deg);
+    transform: translate(0, 12px) rotate(-45deg);
+    margin-left: 300%;
 }
-  
-.change .bar2 {opacity: 0;}
-  
+
+.change .bar2 {
+    opacity: 0;
+    transition: 0.2s;
+}
+
 .change .bar3 {
-   transform: translate(0, -11px) rotate(45deg);
+    transform: translate(0, -12px) rotate(45deg);
+    margin-left: 300%;
 }
 
 .sidenav {
-  height: 100%; /* 100% Full-height */
-  width: 0; /* 0 width - change this with JavaScript */
-  position: fixed; /* Stay in place */
-  z-index: 0; /* Stay on top */
-  top: 0; /* Stay at the top */
-  left: 0;
-  background-color: #2b2929; /* Black*/
-  overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 100px; /* Place content 60px from the top */
-  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+    height: 100%;
+    /* 100% Full-height */
+    width: 0;
+    /* 0 width - change this with JavaScript */
+    position: fixed;
+    /* Stay in place */
+    z-index: 0;
+    /* Stay on top */
+    top: 0;
+    /* Stay at the top */
+    left: 0;
+    background-color: #2b2929;
+    /* Black*/
+    overflow-x: hidden;
+    /* Disable horizontal scroll */
+    padding-top: 100px;
+    /* Place content 60px from the top */
+    transition: 0.5s;
+    /* 0.5 second transition effect to slide in the sidenav */
 }
 
 /* The navigation menu links */
 .sidenav a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
 }
 
 /* When you mouse over the navigation links, change their color */
 .sidenav a:hover {
-  color: #f1f1f1;
-  background-color:rgba(255, 255, 255, 0);
+    color: #f1f1f1;
+    background-color: rgba(255, 255, 255, 0);
 }
 
 /* Position and style the close button (top right corner) */
 .sidenav .closebtn {
-  position: absolute;
-  top:25px;
-  left:125px;
-  right: 25px;
-  font-size: 50px;
+    position: absolute;
+    top: 25px;
+    left: 125px;
+    right: 25px;
+    font-size: 50px;
 }
 
-/*  FIN PAGINA INDEX  */ 
+/*  FIN PAGINA INDEX  */
