--- a/estilos.css
+++ b/estilos.css
@@ -268,6 +268,10 @@ p {
     margin-top: 15%;
     margin-right: 15%;
     margin-left: 15%;
+    background-image:url('Fondo2.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 .tituloinicia {
