--- a/estilos.css
+++ b/estilos.css
@@ -1,7 +1,7 @@
 /* estilos.css */
 
 html {
-    font-family: 'MiFuente';
+    font-family: 'Fuente1';
 }
 
 body {
@@ -9,7 +9,7 @@ body {
 }
 
 @font-face {
-    font-family: 'MiFuente';
+    font-family: 'Fuente1';
     src: url('Perfectly\ Vintages\ Font\ by\ Keithzo.otf') format('opentype');
     /* puedes agregar más estilos de la fuente aquí, como font-weight y font-style */
 }
@@ -48,7 +48,7 @@ body {
     position: initial;
 }
 
-.header a.logo_iniciar{
+.header a.logo_iniciar {
 
     font-size: 25px;
     font-weight: bold;
@@ -119,7 +119,7 @@ body {
 
 /*  Fin pie de página*/
 
-/*  Menú desplegable    */
+/*  Menú desplegable (sidenav)   */
 .iconomenu {
     margin-top: 2px;
     float: left;
@@ -146,6 +146,8 @@ body {
 .change .bar2 {
     opacity: 0;
     transition: 0.2s;
+    cursor: default;
+    pointer-events: none;
 }
 
 .change .bar3 {
@@ -163,60 +165,66 @@ body {
     background-color: #2b2929;
     overflow-x: hidden;
     /* Deshabilita el scroll horizontal */
+    overflow-y:auto;
     padding-top: 8%;
     transition: 0.5s;
     /* 0.5 second transition effect to slide in the sidenav */
 }
 
 
-.sidenav a, .boton-submenu {
+.sidenav a,
+.dropdown-btn {
+    text-wrap: nowrap;
     /* The navigation menu links */
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
     color: #818181;
-    display: flex;
+    display: block;
+    text-align: left;
+    margin-top: 10px;
     transition: 0.3s;
-    border:none;
-    background:none;
-    text-align:left;
-    outline:none;
-    cursor:pointer;
     width: 100%;
-    font-family: 'MiFuente';
 }
 
-.sidenav a:hover , .boton-submenu:hover {
-    color: #f1f1f1;
+.sidenav a:hover,
+.dropdown-btn:hover {
+    color: white;
     background-color: rgba(255, 255, 255, 0);
 }
 
-.Submenu {
+/*    Dropdown    */
+.dropdown-btn {
+    cursor: pointer;
+    border: none;
+    background: none;
+    width: 100%;
+    font-family: Fuente1;
+}
+
+.dropdown-container {
     display: none;
+    padding-left: 8px;
 }
 
-.submenu a{
-
-    background-color: black;
-    border-radius: 0px;
-}
-
-.submenu-activo {
-    border-bottom: rgb(229, 229, 229);
-    border-style: solid;
-    border-width: 3px;
-    border-left: none;
-    border-top: none;
-    border-right:none;
-    color: rgb(229, 229, 229);
-    transition:none;
+.dropdown-container a {
+    margin-top: 0;
+    font-size: 20px;
+    width: 100%;
 }
 
 .fa-caret-down {
-   padding-left:8px;
+    float: right;
+    padding-right: 8px;
 }
 
-/*  Fin menú desplegable*/
+.opcionactiva {
+    background-color: rgb(54, 50, 46);
+    color: white;
+}
+
+/*     Fin Dropdown    */
+/*  Fin menú desplegable  */
 
 /*  FIN PAGINA INDEX    */
 /*--------------------------------------------------------------------------------*/
@@ -353,7 +361,7 @@ body {
 
 .custom-checkbox {
     display: block;
-    margin-left:15%;
+    margin-left: 15%;
     position: relative;
     padding-left: 35px;
     margin-bottom: 12px;
@@ -363,20 +371,20 @@ body {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    color:#f499b8;
-  }
-  
-  /* Hide the browser's default checkbox */
-  .custom-checkbox input {
+    color: #f499b8;
+}
+
+/* Hide the browser's default checkbox */
+.custom-checkbox input {
     position: absolute;
     opacity: 0;
     cursor: pointer;
     height: 0;
     width: 0;
-  }
-  
-  /* Create a custom checkbox */
-  .checkmark {
+}
+
+/* Create a custom checkbox */
+.checkmark {
     position: absolute;
     top: 0;
     left: 0;
@@ -384,32 +392,32 @@ body {
     width: 18px;
     background-color: #8ad199;
     border: 2px solid #f499b8;
-  }
-  
-  /* On mouse-over, add a grey background color */
-  .custom-checkbox:hover input ~ .checkmark {
-    background-color:#75cb88 ;
-  }
-  
-  /* When the checkbox is checked, add a blue background */
-  .custom-checkbox input:checked ~ .checkmark {
+}
+
+/* On mouse-over, add a grey background color */
+.custom-checkbox:hover input~.checkmark {
+    background-color: #75cb88;
+}
+
+/* When the checkbox is checked, add a blue background */
+.custom-checkbox input:checked~.checkmark {
     background-color: #8ad199;
-  }
-  
-  /* Create the checkmark/indicator (hidden when not checked) */
-  .checkmark:after {
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
     content: "";
     position: absolute;
     display: none;
-  }
-  
-  /* Show the checkmark when checked */
-  .custom-checkbox input:checked ~ .checkmark:after {
+}
+
+/* Show the checkmark when checked */
+.custom-checkbox input:checked~.checkmark:after {
     display: block;
-  }
-  
-  /* Style the checkmark/indicator */
-  .custom-checkbox .checkmark:after {
+}
+
+/* Style the checkmark/indicator */
+.custom-checkbox .checkmark:after {
     left: 6px;
     width: 5px;
     height: 11px;
@@ -418,7 +426,7 @@ body {
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
-  }
+}
 
 /*  Fin checkbox    */
 /*  Fin mitad derecha   */
@@ -431,7 +439,7 @@ body {
 .login {
     margin-right: 15%;
     margin-left: 15%;
-    
+
 }
 
 .fondoiniciarsesion {
