--- a/estilos.css
+++ b/estilos.css
@@ -26,6 +26,7 @@ body {
     right: 0;
     background-color: #2b2929;
     padding: 20px 10px;
+    z-index:101;
 }
 
 .header a {
@@ -114,7 +115,6 @@ body {
     right: 0;
     background-color: #2b292900;
     /* De momento transparente */
-    padding: 20px 10px;
 }
 
 /*  Fin pie de página*/
@@ -124,7 +124,8 @@ body {
     margin-top: 2px;
     float: left;
     margin-left: 2%;
-    cursor: pointer;
+    position:fixed;
+    cursor:pointer;
 }
 
 .bar1,
@@ -135,7 +136,6 @@ body {
     background-color: white;
     margin: 6px 0;
     transition: 0.4s;
-    z-index: 5;
 }
 
 .change .bar1 {
@@ -160,17 +160,33 @@ body {
     width: 0;
     position: fixed;
     z-index: 0;
-    top: 0;
+    margin-top:-7.5%;
     left: 0;
     background-color: #2b2929;
     overflow-x: hidden;
     /* Deshabilita el scroll horizontal */
+    max-height: 87.75vh;
     overflow-y:auto;
-    padding-top: 8%;
     transition: 0.5s;
+    z-index:98;
     /* 0.5 second transition effect to slide in the sidenav */
 }
 
+/*scrollbar invisible*/
+
+.sidenav::-webkit-scrollbar {
+    width: 10px;
+    height:10px;
+}
+
+.sidenav::-webkit-scrollbar-track {
+    background:#2b2929;
+}
+   
+  /* Handle */
+.sidenav::-webkit-scrollbar-thumb {
+    background: rgb(135, 135, 135); 
+}
 
 .sidenav a,
 .dropdown-btn {
@@ -204,13 +220,14 @@ body {
 
 .dropdown-container {
     display: none;
-    padding-left: 8px;
 }
 
 .dropdown-container a {
     margin-top: 0;
     font-size: 20px;
     width: 100%;
+    background-color: black;
+    border-radius: 0;
 }
 
 .fa-caret-down {
@@ -317,7 +334,7 @@ body {
 }
 
 .registrate {
-    margin-top: 30%;
+    margin-top: 25%;
     margin-left: 15%;
     color: #f499b8;
 }
