--- a/iniciarsesion.css
+++ b/iniciarsesion.css
@@ -32,7 +32,7 @@
 }
 
 .fondoiniciarsesion {
-    background-image: url('Fondo2.jpg'); /*Fondos 2,3*/
+    background-image: url('Fondo2.jpg'); /*Fondo 4??*/
     background-size: cover;
     overflow: hidden;
     height: 100%;
