--- a/iniciarsesion.css
+++ b/iniciarsesion.css
@@ -20,7 +20,7 @@
 
 .login .header{
     /*     Color cabecera    */
-    background-color: #59260f;
+    background-color: #3c1a0a;
 }
 
 .login .header a:hover{
@@ -160,5 +160,17 @@
     transform: rotate(45deg);
 }
 /*  Fin checkbox    */
+
+/* Mensajes inicio de sesion */
+
+.error {
+    color:red;
+    padding-top:10px;
+    font-size: 20px;
+    margin-top: -2%;
+    margin-left: 15%;
+}
+
+/* Fin mensajes inicio de sesion */
 
 /*  FIN PAGINA INICIAR SESION  */
