--- a/WiseWallet(BD)/iniciarsesion.css
+++ b/WiseWallet(BD)/iniciarsesion.css
@@ -20,7 +20,7 @@
 
 .login .header{
     /*     Color cabecera    */
-    background-color: #59260f;
+    background-color: #3c1a0a;
 }
 
 .login .header a:hover{
