--- a/index.css
+++ b/index.css
@@ -1,11 +1,18 @@
 /*    PAGINA INDEX    */
 /*  Párrafos   */
 .content {
-    margin-left: 20%;
-    margin-right: 20%;
-    text-align: justify;
+    margin-left: 25%;
+    margin-right: 25%;
+    text-align: center;
     margin-top: 200px;
     margin-bottom: 200px;
+    font-family:'Lucida Sans';
+}
+
+.content h1 {
+    font-size: 70px;
+    font-weight: 150;
+    font-family: Fuente3;
 }
 /*  Fin párrafos*/
 /*     FIN PAGINA INDEX    */
