--- a/iniciarsesion.css
+++ b/iniciarsesion.css
@@ -20,7 +20,7 @@
 
 .login .header{
     /*     Color cabecera    */
-    background-color: #3c1a0a;
+    background-color: #59260f;
 }
 
 .login .header a:hover{
