--- a/iniciarsesion.css
+++ b/iniciarsesion.css
@@ -26,7 +26,7 @@
 
 
 .fondoiniciarsesion {
-    background-image: url('Fondo2.jpg'); /*Fondo 4??*/
+    background-image: url('Fondo4.png'); /*Fondo 4??*/
     background-size: cover;
     overflow: hidden;
     height: 100%;
